--- a/bookofspells/bookofspells/Views/Home/Index.cshtml
+++ b/bookofspells/bookofspells/Views/Home/Index.cshtml
@@ -2,7 +2,50 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<section class="jumbotron bg-white mb-5 pr-0">
+    <div class="row align-items-center justify-content-around">
+        <div id="jumbo-text" class="col-12 col-md-5 col-lg-4">
+            <h1>Lorem ipsum dolor sit amet, tempornostrud magna aliqua.</h1>
+        </div>
+        <div id="jumbo-img" class="col-12 col-md-7">
+            <img src="~/img/devil-goat-with-sacred-geometry.png" class="img-fluid border" alt="" aria-hidden="true" />
+        </div>
+    </div>
+</section>
+
+<section class="container mb-5">
+    <h2 class="mb-4">Tempor nostrud magna aliqua.</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in.
+    </p>
+</section>
+
+<section class="container mb-5">
+    <h2 class="mb-4">Featured Spells</h2>
+    <div class="continue">
+        <a asp-area="" asp-controller="spellbook" asp-action="index">View all spells</a>
+    </div>
+    <div class="row">
+        @for (int i = 0; i < 12; i++)
+        {
+            <div class="col-sm-6 col-md-4 mb-4">
+                <div class="card">
+                    <img class="card-img-top" src="~/img/devil-goat-with-sacred-geometry.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h4 class="card-title">Excepteur Sint Occaecat</h4>
+                        <p class="card-text">
+                            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut...
+                        </p>
+                        <a href="#" class="text-right">Read more</a>
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
+</section>
+
+<section class="container bg-lightgray mb-5 p-5">
+    <h2 class="mb-4">Tempor nostrud magna aliqua.</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in.
+    </p>
+    <button class="btn btn-secondary bg-darkgray px-4 py-2">Cast a spell</button>
+</section>
