--- a/bookofspells/bookofspells/Views/Shared/_Layout.cshtml
+++ b/bookofspells/bookofspells/Views/Shared/_Layout.cshtml
@@ -3,41 +3,62 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - bookofspells</title>
+    <title>@ViewData["Title"] - Book of Spells &amp; Illumination</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">bookofspells</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
+        <nav class="navbar navbar-expand-lg navbar-light bg-white d-print-none mb-5">
+            <div class="container-fluid">
+                <a class="navbar-brand" asp-area="" asp-controller="home" asp-action="index">Book of Spells &amp; Illumination</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                <div id="navbar" class="navbar-collapse collapse">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item mx-2 active">
+                            <a class="nav-link" asp-area="" asp-controller="home" asp-action="index">Featured Spells <span class="sr-only">(current)</span></a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        <li class="nav-item mx-2">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="spellbook" asp-action="index">Visit the Spellbook</a>
+                        </li>
+                        <li class="nav-item mx-2">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="spellbook" asp-action="castspell">Cast a Spell</a>
+                        </li>
+                        <li class="nav-item mx-2">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="home" asp-action="contact">Send a Raven</a>
                         </li>
                     </ul>
+                    <form class="form-inline my-2 my-lg-0">
+                        <input class="form-control ml-sm-2" type="search" placeholder="Search" aria-label="Search">
+                        @*<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>*@
+                    </form>
                 </div>
             </div>
         </nav>
     </header>
-    <div class="container">
-        <main role="main" class="pb-3">
+    <main role="main" class="pb-3">
+        <div class="container-fluid mb-5">
             @RenderBody()
-        </main>
-    </div>
+        </div>
+    </main>
+
+    <section class="mx-sm-3 mb-5">
+        <div class="jumbotron bg-darkgray text-center text-light">
+            <div class="row align-items-center justify-content-around mx-0 px-sm-5">
+                <p class="h2 mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua ad minim veniam, quis nostrud exercitation ullamco laboris nisi.</p>
+                <form class="form-inline my-2 my-lg-0">
+                    <input class="form-control mx-sm-2" type="email" placeholder="email" aria-label="Email address">
+                    <button class="btn btn-outline-secondary my-2 my-sm-0 px-4" type="submit">Signup</button>
+                </form>
+            </div>
+        </div>
+    </section>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2020 - bookofspells - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        <div class="container-fluid">
+            &copy; 2020 - Book of Spells &amp; Illumination - <a asp-area="" asp-controller="home" asp-action="privacy">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
