--- a/bookofspells/bookofspells/wwwroot/css/site.css
+++ b/bookofspells/bookofspells/wwwroot/css/site.css
@@ -1,5 +1,8 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
+nav {
+    font-size: 1.2rem;
+}
 
 a.navbar-brand {
   white-space: normal;
@@ -9,7 +12,13 @@ a.navbar-brand {
 
 /* Provide sufficient contrast against white background */
 a {
-  color: #0366d6;
+  color: #222;
+  text-transform: uppercase;
+}
+
+main a {
+    text-decoration: underline;
+    font-size: 1rem;
 }
 
 .btn-primary {
@@ -59,13 +68,66 @@ html {
 }
 
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
+    font-weight: 200;
+    font-size: 1.5rem;
+    color: #222;
 }
+
+img {
+    display: block;
+    width: 100%;
+}
+
+button {
+    text-transform: uppercase;
+}
+
+.bg-darkgray {
+    background-color: #555555;
+}
+.bg-lightgray {
+    background-color: #e5e5e5;
+}
+
 .footer {
   position: absolute;
   bottom: 0;
   width: 100%;
-  white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
+}
+
+
+/*
+    HEADING SECTIONS
+*/
+.jumbotron {
+    border-radius: 0;
+}
+#jumbo-text {
+    padding-left: 3rem;
+    word-break: break-word;
+}
+#jumbo-img img {
+    max-height: 600px;
+}
+
+h1, h2, h3, h4, h5, h6,
+.h1, .h2, .h3, .h4, .h5, .h6 {
+    font-weight: 200;
+}
+h1, .h1 {
+    font-size: 3rem;
+}
+h2, .h2 {
+    font-size: 2.25rem;
+}
+
+
+/*
+    SPELL CARDS
+*/
+.card-text {
+    font-size: 1.25rem;
 }
