--- a/bookofspells/bookofspells/Views/Home/Contact.cshtml
+++ b/bookofspells/bookofspells/Views/Home/Contact.cshtml
@@ -1,7 +1,39 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
 }
 
-<h1>Send a raven!</h1>
+
+<section class="container pt-5 mb-5">
+    <h1 class="mb-4">Tempor nostrud magna aliqua.</h1>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in.
+    </p>
+</section>
+
+
+<section class="container mb-5">
+    <form id="contact">
+        <div class="form-group">
+            <label for="name" class="sr-only">Your name</label>
+            <input type="text" class="form-control form-control-lg" id="name" placeholder="Name" required>
+        </div>
+
+        <div class="form-group">
+            <label for="email" class="sr-only">Email</label>
+            <input type="email" class="form-control form-control-lg" id="email" placeholder="Email" required>
+        </div>
+
+        <div class="form-group">
+            <label for="phone" class="sr-only">Phone number</label>
+            <input type="tel" class="form-control form-control-lg" id="phone" placeholder="Phone" required>
+        </div>
+
+        <div class="form-group mb-5">
+            <label for="message" class="sr-only">Your message</label>
+            <textarea type="text" class="form-control form-control-lg" id="message" rows="13" placeholder="Message" required></textarea>
+        </div>
+
+        <div class="text-right">
+            <button class="btn bg-darkgray text-light py-2 px-sm-4" href="" type="submit">Send raven</button>
+        </div>
+    </form>
+</section>
