--- a/bookofspells/bookofspells/Views/Home/Index.cshtml
+++ b/bookofspells/bookofspells/Views/Home/Index.cshtml
@@ -2,9 +2,9 @@
     ViewData["Title"] = "Home Page";
 }
 
-<section class="jumbotron bg-white mb-5 pr-0">
-    <div class="row align-items-center justify-content-around">
-        <div id="jumbo-text" class="col-12 col-md-5 col-lg-4">
+<section class="jumbotron bg-white mb-5 pr-md-0">
+    <div class="row align-items-center justify-content-end">
+        <div class="col-12 col-md-5 col-lg-4">
             <h1>Lorem ipsum dolor sit amet, tempornostrud magna aliqua.</h1>
         </div>
         <div id="jumbo-img" class="col-12 col-md-7">
@@ -19,11 +19,17 @@
     </p>
 </section>
 
+
 <section class="container mb-5">
-    <h2 class="mb-4">Featured Spells</h2>
-    <div class="continue">
-        <a asp-area="" asp-controller="spellbook" asp-action="index">View all spells</a>
+    <div class="row">
+        <div class="col mb-4">
+            <h2 class="mb-0">Featured Spells</h2>
+        </div>
+        <div class="col text-right">
+            <a asp-area="" asp-controller="spellbook" asp-action="index">View all spells &nbsp;&nbsp;<i class="fa fa-angle-right"></i></a>
+        </div>
     </div>
+
     <div class="row">
         @for (int i = 0; i < 12; i++)
         {
@@ -35,7 +41,9 @@
                         <p class="card-text">
                             Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut...
                         </p>
-                        <a href="#" class="text-right">Read more</a>
+                        <div class="text-right">
+                            <a href="#" class="text-right">Read more &nbsp;&nbsp;<i class="fa fa-angle-right"></i></a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -43,9 +51,12 @@
     </div>
 </section>
 
+
 <section class="container bg-lightgray mb-5 p-5">
     <h2 class="mb-4">Tempor nostrud magna aliqua.</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in.
     </p>
-    <button class="btn btn-secondary bg-darkgray px-4 py-2">Cast a spell</button>
+    <div class="text-right">
+        <button class="btn bg-darkgray text-light px-4 py-2">Cast a spell</button>
+    </div>
 </section>
