--- a/bookofspells/bookofspells/Views/Spellbook/Index.cshtml
+++ b/bookofspells/bookofspells/Views/Spellbook/Index.cshtml
@@ -1,7 +1,85 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
 }
 
-<h1>Spellbook</h1>
+
+<section class="container pt-5 mb-5">
+    <h1 class="mb-4">Tempor nostrud magna aliqua.</h1>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in.
+    </p>
+</section>
+
+
+<section class="container mb-5">
+    <h2 class="mb-4">White Magic</h2>
+
+    <div class="row">
+        @for (int i = 0; i < 3; i++)
+        {
+            <div class="col-sm-6 col-md-4 mb-4">
+                <div class="card">
+                    <img class="card-img-top" src="~/img/devil-goat-with-sacred-geometry.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h4 class="card-title">Excepteur Sint Occaecat</h4>
+                        <p class="card-text">
+                            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut...
+                        </p>
+                        <div class="text-right">
+                            <a href="#" class="text-right">Read more &nbsp;&nbsp;<i class="fa fa-angle-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
+</section>
+
+
+<section class="container mb-5">
+    <h2 class="mb-4">Grey Magic</h2>
+    
+    <div class="row">
+        @for (int i = 0; i < 3; i++)
+        {
+            <div class="col-sm-6 col-md-4 mb-4">
+                <div class="card">
+                    <img class="card-img-top" src="~/img/devil-goat-with-sacred-geometry.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h4 class="card-title">Excepteur Sint Occaecat</h4>
+                        <p class="card-text">
+                            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut...
+                        </p>
+                        <div class="text-right">
+                            <a href="#" class="text-right">Read more &nbsp;&nbsp;<i class="fa fa-angle-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
+</section>
+
+
+<section class="container mb-5">
+    <h2 class="mb-4">Black Magic</h2>
+
+    <div class="row">
+        @for (int i = 0; i < 3; i++)
+        {
+            <div class="col-sm-6 col-md-4 mb-4">
+                <div class="card">
+                    <img class="card-img-top" src="~/img/devil-goat-with-sacred-geometry.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h4 class="card-title">Excepteur Sint Occaecat</h4>
+                        <p class="card-text">
+                            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut...
+                        </p>
+                        <div class="text-right">
+                            <a href="#" class="text-right">Read more &nbsp;&nbsp;<i class="fa fa-angle-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
+</section>
