--- a/bookofspells/bookofspells/Views/Home/Contact.cshtml
+++ b/bookofspells/bookofspells/Views/Home/Contact.cshtml
@@ -1,6 +1,6 @@
-﻿@model ContactForm
+﻿@model ContactForm;
 @{
-    ViewData["Title"] = "Send a Raven (Contact)";
+    ViewData["Title"] = "Send a Raven";
 }
 
 
@@ -12,31 +12,34 @@
 </section>
 
 
-<section class="container mb-5">
-    @if (Model != null)
-    {
-        <p class="h3 mb-5">A raven has delivered your message!</p>
-    }
+<section id="contact" class="container mb-5">
+    @if (ViewBag.Message != null)
+     {
+        @if (ViewBag.Message.Name != null)
+         {
+            <p class="h3 pt-4 mb-5">A raven has delivered your message!</p>
+         }
+     }
 
-    <form id="contact" method="post">
+    <form id="message" method="post">
         <div class="form-group">
             <label for="name" class="sr-only">Your name</label>
-            <input type="text" class="form-control form-control-lg" id="name" placeholder="Name" required>
+            <input type="text" asp-for="Name" class="form-control form-control-lg" id="name" placeholder="Name" required>
         </div>
 
         <div class="form-group">
             <label for="email" class="sr-only">Email</label>
-            <input type="email" class="form-control form-control-lg" id="email" placeholder="Email" required>
+            <input type="email" asp-for="Email" class="form-control form-control-lg" id="email" placeholder="Email" required>
         </div>
 
         <div class="form-group">
             <label for="phone" class="sr-only">Phone number</label>
-            <input type="tel" class="form-control form-control-lg" id="phone" placeholder="Phone" required>
+            <input type="tel" asp-for="Phone" class="form-control form-control-lg" id="phone" placeholder="Phone" required>
         </div>
 
         <div class="form-group mb-5">
             <label for="message" class="sr-only">Your message</label>
-            <textarea type="text" class="form-control form-control-lg" id="message" rows="13" placeholder="Message" required></textarea>
+            <textarea type="text" asp-for="Message" class="form-control form-control-lg" id="message" rows="13" placeholder="Message" required></textarea>
         </div>
 
         <div class="text-right">
@@ -44,3 +47,15 @@
         </div>
     </form>
 </section>
+
+
+@section scripts
+{
+    @if (ViewBag.Message != null)
+     {
+        @if (ViewBag.Message.Name != null)
+         {
+            <script>jumpTo('contact');</script>
+         }
+     }
+}
