--- a/bookofspells/bookofspells/Views/Spellbook/Index.cshtml
+++ b/bookofspells/bookofspells/Views/Spellbook/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model List<Spell>
+@{
     ViewData["Title"] = "Spellbook";
 }
 
@@ -15,16 +16,14 @@
     <h2 class="mb-4">White Magic</h2>
 
     <div class="row">
-        @for (int i = 0; i < 3; i++)
+        @for (int i = 0; i < ViewBag.Black.Count; i++)
         {
             <div class="col-sm-6 col-md-4 mb-4">
                 <div class="card">
                     <img class="card-img-top" src="~/img/devil-goat-with-sacred-geometry.png" alt="Spell image" aria-hidden="true">
                     <div class="card-body">
-                        <h4 class="card-title">Excepteur Sint Occaecat</h4>
-                        <p class="card-text">
-                            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut...
-                        </p>
+                        <h4 class="card-title">@ViewBag.White[i].Title</h4>
+                        <p class="card-text">@ViewBag.White[i].Enchantment</p>
                         <div class="text-right">
                             <a href="#" class="text-right">Read more &nbsp;&nbsp;<i class="fa fa-angle-right"></i></a>
                         </div>
@@ -40,16 +39,14 @@
     <h2 class="mb-4">Grey Magic</h2>
 
     <div class="row">
-        @for (int i = 0; i < 3; i++)
+        @for (int i = 0; i < ViewBag.Grey.Count; i++)
         {
             <div class="col-sm-6 col-md-4 mb-4">
                 <div class="card">
                     <img class="card-img-top" src="~/img/devil-goat-with-sacred-geometry.png" alt="Spell image" aria-hidden="true">
                     <div class="card-body">
-                        <h4 class="card-title">Excepteur Sint Occaecat</h4>
-                        <p class="card-text">
-                            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut...
-                        </p>
+                        <h4 class="card-title">@ViewBag.Grey[i].Title</h4>
+                        <p class="card-text">@ViewBag.Grey[i].Enchantment</p>
                         <div class="text-right">
                             <a href="#" class="text-right">Read more &nbsp;&nbsp;<i class="fa fa-angle-right"></i></a>
                         </div>
@@ -65,16 +62,14 @@
     <h2 class="mb-4">Black Magic</h2>
 
     <div class="row">
-        @for (int i = 0; i < 3; i++)
+        @for (int i = 0; i < ViewBag.Black.Count; i++)
         {
             <div class="col-sm-6 col-md-4 mb-4">
                 <div class="card">
                     <img class="card-img-top" src="~/img/devil-goat-with-sacred-geometry.png" alt="Spell image" aria-hidden="true">
                     <div class="card-body">
-                        <h4 class="card-title">Excepteur Sint Occaecat</h4>
-                        <p class="card-text">
-                            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut...
-                        </p>
+                        <h4 class="card-title">@ViewBag.Black[i].Title</h4>
+                        <p class="card-text">@ViewBag.Black[i].Enchantment</p>
                         <div class="text-right">
                             <a href="#" class="text-right">Read more &nbsp;&nbsp;<i class="fa fa-angle-right"></i></a>
                         </div>
