--- a/bookofspells/bookofspells/Views/Spellbook/Enchantment.cshtml
+++ b/bookofspells/bookofspells/Views/Spellbook/Enchantment.cshtml
@@ -1,12 +1,13 @@
-﻿@{
-    ViewData["Title"] = "Enchantment";
+﻿@model Spell;
+@{
+    ViewData["Title"] = ViewBag.Spell.Title;
 }
 
 
 <section class="jumbotron bg-white mb-5 pr-md-0">
     <div class="row align-items-center justify-content-end">
         <div class="col-12 col-md-5 col-lg-4">
-            <h1>Spell title</h1>
+            <h1>@ViewBag.Spell.Title</h1>
         </div>
         <div id="jumbo-img" class="col-12 col-md-7">
             <img src="~/img/devil-goat-with-sacred-geometry.png" class="img-fluid" alt="spell image" aria-hidden="true" />
@@ -15,6 +16,6 @@
 </section>
 
 <section class="container mb-5">
-    <h2 class="mb-4">Magic-type Intention(s) Spell</h2>
-    <p>Enchantment text</p>
+    <h2 class="mb-4">@ViewBag.Spell.MagicType @ViewBag.Spell.Intention Spell</h2>
+    <p class="enchantment-text">@ViewBag.Spell.Enchantment</p>
 </section>
