--- a/bookofspells/bookofspells/Views/Shared/_Layout.cshtml
+++ b/bookofspells/bookofspells/Views/Shared/_Layout.cshtml
@@ -107,7 +107,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col text-right mb-4">
+                <div class="col-12 col-md-4 text-right mb-4">
                     &copy; 2020 - Book of Spells &amp; Illumination.
                 </div>
             </div>
