--- a/bookofspells/bookofspells/Views/Spellbook/CastSpell.cshtml
+++ b/bookofspells/bookofspells/Views/Spellbook/CastSpell.cshtml
@@ -93,12 +93,12 @@
             </div>
 
             <div class="col-6 align-self-center">
-                <label class="sr-only" for="inlineFormInputGroupUsername">Username</label>
+                <label class="sr-only" for="username">Username</label>
                 <div class="input-group">
                     <div class="input-group-prepend">
                         <div class="input-group-text">&#64;</div>
                     </div>
-                    <input asp-for="User.Username" type="text" class="form-control" id="inlineFormInputGroupUsername" placeholder="Username" required>
+                    <input asp-for="User.Username" type="text" class="form-control" id="username" placeholder="Username" required>
                 </div>
             </div>
 
