--- a/bookofspells/bookofspells/Views/Home/Index.cshtml
+++ b/bookofspells/bookofspells/Views/Home/Index.cshtml
@@ -34,7 +34,7 @@
     </div>
 
     <div class="row">
-        @for (int i = 0; i < ViewBag.Spell.Count; i++)
+        @for (int i = 0; i < ViewBag.Spell.Count && i < 6; i++)
         {
             <div class="col-sm-6 col-md-4 mb-4">
                 <div class="card">
